Correct Z-INDEX to prevent pop up inside orange box

--- a/app/assets/stylesheets/prepare.css.scss
+++ b/app/assets/stylesheets/prepare.css.scss
@@ -715,6 +715,7 @@ a.checklist:before {
 
 	&.active {
 		opacity: 1;
+		z-index: 3;
 	}
 
 	&:before,
